Closed Bug 1728413 Opened 4 years ago Closed 4 years ago

mistik.xtr.jp doesn't load

Categories

(Core :: DOM: Navigation, defect)

Firefox 91
Desktop
All
defect

Tracking

()

VERIFIED FIXED
94 Branch
Fission Milestone MVP
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- verified
firefox91 --- wontfix
firefox92 --- wontfix
firefox93 --- wontfix
firefox94 --- fixed

People

(Reporter: ksenia, Assigned: peterv)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

This was initially reported in https://github.com/webcompat/web-bugs/issues/85166

To reproduce visit https://mistik.xtr.jp/ml_ssr/ and observe the site

Expected:
Site loads

Actual:
Site never finishes loading

From mozregression:

13:01.59 INFO: Narrowed integration regression window from [e2bac24e, a45808c1] (3 builds) to [e2bac24e, 09c598c8] (2 builds) (~1 steps left)
13:01.59 INFO: No more integration revisions, bisection finished.
13:01.59 INFO: Last good revision: e2bac24ec485f16267aa61e500ef566ce1d75525
13:01.59 INFO: First bad revision: 09c598c8fd29606df563d24b8f9c3a67ffbd4b7a
13:01.59 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e2bac24ec485f16267aa61e500ef566ce1d75525&tochange=09c598c8fd29606df563d24b8f9c3a67ffbd4b7a

Hi Peter, could you please take a look?

Flags: needinfo?(peterv)
Assignee: nobody → peterv
Status: NEW → ASSIGNED

The webcompat issue was reported for Firefox 91 three days ago, so the user was presumably not using Fission.

I can't reproduce this anymore, I wonder if the site has changed.

Flags: needinfo?(peterv)

Hi Ksenia, can you confirm and in case close this? Thank you!

Flags: needinfo?(kberezina)

peterv just said on matrix he did manage to reproduce this again :)

Flags: needinfo?(kberezina)

Actually, I can reproduce it. But it might be fission-only?

I can reproduce this still. Also tried with fission disabled, the site also doesn't load

Getting all the requests from the loadgroup every time a request
is added or removed was causing performance issues. It turns out
that it wasn't really needed for determining if a page should be
blocked from the BFCache, since we just need to know if there
are any requests in the loadgroup, and if so, if all it contains
is just one request with an id. We can keep a count of relevant
requests in the loadgroup. When the count changes to 1, on adding
we can inspect the request that's being added, and on removal we
can inspect the requests in the loadgroup (which should be now be
cheap enough, since there's only 1 relevant request in the list).

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Depends on: 1730651
Regressions: 1730651
No longer depends on: 1730651
No longer regressions: 1730651
Blocks: 1738292

Should we consider this for ESR91 uplift? Looks like it grafts cleanly.

Flags: needinfo?(peterv)

Comment on attachment 9240615 [details]
Bug 1728413 - mistik.xtr.jp doesn't load. r?smaug!

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This bug result in some sites not loading at all.
  • User impact if declined: Some sites don't load anymore.
  • Fix Landed on Version: 94
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The algorithm for determining if something should go into the BFCache with Fission enabled was changed to be simpler, to resolve a performance issue. Apart from the improved performance, the change would only affect BFCaching if Fission is enabled.
Flags: needinfo?(peterv)
Attachment #9240615 - Flags: approval-mozilla-esr91?

Comment on attachment 9240615 [details]
Bug 1728413 - mistik.xtr.jp doesn't load. r?smaug!

This has gotten pretty significant bake time on release and fixes some known site bustages in the wild. Approved for 91.6esr.

Attachment #9240615 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
Has Regression Range: --- → yes
QA Whiteboard: [qa-triaged]

Reproduced with 91.5.1esr on Windows 10.
Verified fixed with 91.6.0esr on Windows 10, macOS 10.13 and Ubuntu 20.04.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: